# VertexChain

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  SECURITY.md  k8s
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-images.yml  ci.yml  image-sign.yml  node-matrix.yml  pr-title-lint.yml  sbom.yml  stale.yml
.husky/: pre-commit
Backend/: .dockerignore  .env.example  package-lock.json  package.json
Backend/src/: app.module.ts  export-spec.ts  main.ts
Backend/test/: app.e2e-spec.ts  compression.e2e-spec.ts  gists.e2e.spec.ts
Frontend/: README.md  package-lock.json  package.json  vitest.config.ts
analytics/: package.json
analytics/lib/: excel.ts  export.ts
charts/vertexchain/: values.yaml
contracts/: Cargo.toml  README.md
contracts/batch-wallet/: Cargo.toml
contracts/batch-wallet/src/: events.rs  lib.rs
contracts/gist-registry/: Cargo.toml
contracts/governance/: Cargo.toml
contracts/governance/src/: events.rs  lib.rs
contracts/multisig/: Cargo.toml
contracts/multisig/src/: events.rs  lib.rs
docker/: README.md  backend.Dockerfile  frontend.Dockerfile
docs/adr/: 0001-stellar-as-blockchain.md  0002-use-of-geohash.md  0003-mock-mode-defaults.md  0004-postgres-extensions.md  0005-postgis-only-geospatial.md  0006-hybrid-on-chain-off-chain-storage.md
infrastructure/ci/: docker-build-pipeline.yml  docs-generation.yml  frontend-build.yml  pipeline-monitoring.yml  quality-gates.yml  terraform.yml
infrastructure/docker/: backend.Dockerfile  (+3 more)
(+64 files in other folders)
